correct footer link spacing mobile

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -360,8 +360,8 @@
 
 @media screen and (max-width: 989px) {
   .footer-block__details-content .list-menu__item--link {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
 }
 
